--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,8 @@
                 </a>
             </li>
             <li class="navbar-item">
-                <a class="navbar-item" href="#" style="background-image:
-                    url(/static/images/library.png);">
+                <a class="navbar-item" href="{{ url_for('problist') }}"
+                    style="background-image: url(/static/images/library.png);">
                     题集
                 </a>
             </li>
