--- a/static/blocks.css
+++ b/static/blocks.css
@@ -8,9 +8,7 @@ div.mainpart, div.bodypart, div.submitpart {
     padding-left: 10px;
     padding-right: 10px;
     overflow-y: auto;
-    border-color: rgb(92, 206, 239);
-    border-width: 3px;
-    border-style: solid;
+    border: 3px solid rgb(92, 206, 239);
     border-radius: 4px;
     box-shadow: 2px 2px 5px rgba(0, 0, 127, .3);
 }
