--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,6 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
     <script type="text/javascript" src="/static/marked.min.js"></script>
-    <script type="text/javascript" src="/static/katex.min.js"></script>
-    <script type="text/javascript" src="/static/auto-render.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/katex.min.css">
     <link rel="stylesheet" type="text/css" href="/static/base.css">
     {% block styles %}{% endblock %}
 </head>
@@ -33,7 +30,7 @@
             </li>
             <li class="navbar-item">
                 <a class="navbar-item" href="#" style="background-image:
-                    url(/static/images/tags.png);">
+                    url(/static/images/labels.png);">
                     标签
                 </a>
             </li>
