--- a/templates/solutions.html
+++ b/templates/solutions.html
@@ -26,9 +26,7 @@
     <div class="sidebar-item">{{ username }}</div>
 </div>
 <div id="bodydiv" class="bodypart">
-    <textarea id="bodytext" class="bodytext" readonly>
-        {{ solution }}
-    </textarea>
+    {{ solution }}
 </div>
 <div id="submitdiv" class="submitpart">
     <h3>更多题解</h3>
@@ -45,5 +43,7 @@
     <p>暂无</p>
     {% endif %}
 </div>
-<script type="text/javascript" src="/static/md-render.js"></script>
+<script src="/static/mathjax-config.js"></script>
+<script src="/static/MathJax/tex-chtml.js"></script>
+<script src="/static/md-render.js"></script>
 {% endblock %}
