--- a/static/problist.css
+++ b/static/problist.css
@@ -3,7 +3,6 @@ table.problist {
     width: 100%;
     border: 2px solid lightskyblue;
     border-collapse: collapse;
-    font-family: Andale Mono;
     tr {
         height: 35px;
     }
@@ -23,6 +22,7 @@ table.problist {
     }
     td.probno {
         width: 10%;
+        font-family: Andale Mono;
     }
     td.problabels {
         width: 30%;
@@ -30,14 +30,16 @@ table.problist {
     td.source {
         width: 15%;
     }
-    div.problabel {
+    a.problabel {
+        text-decoration: none;
+        color: black;
         border: 1px solid paleturquoise;
         border-radius: 5px;
         display: inline-block;
         padding-left: 3px;
         padding-right: 3px;
     }
-    div.problabel:hover {
+    a.problabel:hover {
         background-color: paleturquoise;
         cursor: pointer;
     }
