--- a/static/blocks.css
+++ b/static/blocks.css
@@ -22,7 +22,8 @@ div.bodypart {
     left: 16%;
     width: 45%;
     display: none;
-    padding: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
     img {
         width: 100%;
     }
